# rust_move_gen

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
.cargo/: config  config.toml
src/: bb.rs  board.rs  cache.rs  castle.rs  castling_rights.rs  dbb.rs  hash.rs  integrity.rs  lib.rs  main.rs  mv.rs  perft.rs  piece.rs  side.rs  square.rs  tree.rs  util.rs
src/board/: fen.rs  make.rs  mod.rs
src/generation/: attacks.rs  castle.rs  lookup.rs  mod.rs  pawn.rs  pinned.rs  util.rs
src/generation/slider/: consts.rs  mod.rs  ray_hyperbola.rs  ray_kogge_stone.rs  ray_naive.rs  ray_subtract.rs  testing.rs
src/generation/slider/ray_bmi2/: consts.rs  generation.rs  mod.rs
src/generation/slider/ray_magic/: consts.rs  mod.rs
src/mv_list/: best_mv_tracker.rs  mod.rs  mv_counter.rs  mv_slice.rs  mv_vec.rs  piece_square_table.rs  scored_move_list.rs  scored_mv_list.rs  scored_mv_vec.rs  sorted_move_adder.rs  sorted_move_list.rs  sorted_scored_mv_list.rs
src/position/: fen.rs  make.rs  mod.rs
tests/: basic.rs
