[package]
name = "chess-move-gen"
description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
version = "0.6.4"
authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
homepage = "https://github.com/peterellisjones/rust_move_gen"
repository = "https://github.com/peterellisjones/rust_move_gen.git"
keywords = ["chess"]
categories = ["game-engines"]
license = "MIT"
include = [
    "src/*.rs",
    "Cargo.toml",
    "LICENSE.txt"
]

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 1

[dependencies]
rand = "0.6.1"
unindent = "0.1.3"
packed_simd = "0.3.3"
threadpool = "1.7.1"
num_cpus = "1.8.0"
