[package]
name = "chess-move-gen"
description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
version = "0.8.2"
authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
homepage = "https://github.com/peterellisjones/rust_move_gen"
repository = "https://github.com/peterellisjones/rust_move_gen.git"
keywords = ["chess"]
categories = ["game-engines"]
license = "MIT"
include = [
    "src/**/*.rs",
    "Cargo.toml",
    "LICENSE.txt"
]

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
lto = true
overflow-checks = false

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 1

[dependencies]
rand = "0.7.3"
packed_simd = { version = "0.3.4", package = "packed_simd_2" }
threadpool = "1.8.1"
num_cpus = "1.13.0"

[dev-dependencies]
unindent = "0.1.7"
