[package]
name = "chess-move-gen"
description = "Fast chess move generation library. Uses SIMD for fast sliding piece move generation"
version = "0.9.0"
authors = ["Peter Ellis Jones <pete@peterellisjones.com>"]
homepage = "https://github.com/peterellisjones/rust_move_gen"
repository = "https://github.com/peterellisjones/rust_move_gen.git"
keywords = ["chess"]
categories = ["game-engines"]
license = "MIT"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE.txt"]
edition = "2024"

[lib]
path = "src/lib.rs"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
overflow-checks = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 1

[dependencies]
rand = "0.8.5"
threadpool = "1.8.1"
num_cpus = "1.16.0"

[dev-dependencies]
unindent = "0.2.3"
